# conduit

./: .gitignore  CMakeLists.txt  Makefile
rapport/: MEP.indd  bouillon.md
rapport/Links/: buffer.ai
rapport/resources/: data.out  table.out
script/bench/: generate-data.sh  generate-graph.sh  gnuplot.in
script/test/: test.sh
script/test/output/: 1_SimpleRW_annon.expected  2_SimpleRW_file.expected  3_simpleRW_vector.expected  5_Eof_write.expected
src/bench/: bench_conduct.c  bench_pipe.c  bench_socket.c  file_copy_conduct.old.c  file_copy_pipe.old.c  file_copy_socket.old.c
src/conduct/: conduct.c  conduct.h
src/tests/: 1_SimpleRW_annon.c  2_SimpleRW_file.c  3_simpleRW_vector.c  4_Eof_read.c  5_Eof_write.c  6_fork_annon.c  7_fork_file.c  julia.c
src/utils/: bench.c  bench.h
